--- a/02_Vue模板/Vue模板语法.html
+++ b/02_Vue模板/Vue模板语法.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>初识Vue</title>
+    <title>Vue模板语法</title>
     <script src="../js/vue.js"></script>
-    
 </head>
 <body>
     <div id="root">
