--- a/10_绑定样式/绑定样式.html
+++ b/10_绑定样式/绑定样式.html
@@ -23,14 +23,14 @@
             background-color: skyblue;
         }
 
-        .atguigu1{
+        .gjc1{
             background-color: yellowgreen;
         }
-        .atguigu2{
+        .gjc2{
             font-size: 30px;
             text-shadow:2px 2px 10px red;
         }
-        .atguigu3{
+        .gjc3{
             border-radius: 20px;
         }
     </style>
@@ -40,13 +40,24 @@
 <body>
     <div id="root">
         <div class="basic" :class="mood" @click="changeMood">姓名:{{name}}</div>
+        <br/>
+        <div class="basic" :class="classArr">姓名:{{name}}</div>
+        <br/>
+        <div class="basic" :class="classFlag">姓名:{{name}}</div>
+        <br/>
     </div>
     <script type="text/javascript"> 
        const vm = new Vue({
            el:"#root",
            data:{
              name:"麻花疼",
-             mood:"normal"
+             mood:"normal",
+             classArr:["gjc1","gjc2","gjc3"],
+             classFlag:{
+                gjc1:true,
+                gjc2:false,
+                gjc3:true
+             }
            },
            methods: {
                 changeMood(){
