--- a/12_列表渲染/03_列表过滤.html
+++ b/12_列表渲染/03_列表过滤.html
@@ -17,7 +17,7 @@
     </div>
     <script type="text/javascript">
         Vue.config.productionTip = false;
-
+        /* 监听属性 */
         /* const x = new Vue({
            el:"#root",
            data:{
@@ -43,6 +43,7 @@
         })
  */
         
+        /* 计算属性 */
         const y = new Vue({
            el:"#root",
            data:{
